--- a/donate-thanks.html
+++ b/donate-thanks.html
@@ -99,9 +99,9 @@
         <p><a class="btn btn-secondary" href="volunteer.html" role="button">Volunteer Now &raquo;</a></p>
       </div>
       <div class="col-md-4">
-        <h3>Donate</h3>
+        <h3>Report a Stray</h3>
         <p>We are a non-profit business, which means all funds from dog adoptions and all donations go towards new equipment, dog food and toys, and petrol for transport to rescue abandoned and stray dogs. Your donation could help save a dogs life. </p>
-        <p><a class="btn btn-secondary" href="donate.html" role="button">Donate Now &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="report.html" role="button">Report Now &raquo;</a></p>
       </div>
       <div class="col-md-4">
         <h3>Adopt</h3>
