--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
       
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+          <img src="Images/logo-test-3.jpg">
         <a class="navbar-brand" href="#">Animal Protection Society</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -78,7 +79,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="adopt-4.html">Adopt</a>
+              <a class="nav-link" href="adopt.html">Adopt</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="donate.html">Donate</a>
@@ -108,7 +109,7 @@
         <p class="lead">The Animal Protection Society is a non-profit enterprise that aims to rescue homesless and injured strays off of the streets.<br>We rehabilitate them, reintroduce them to other dogs and humans, and rehome them to loving homes once they have reached their full health.</p>
         </div>
 
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <div id="myCarousel" class="carousel slide starter-template container lead-wide" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
           <li data-target="#myCarousel" data-slide-to="1"></li>
@@ -145,7 +146,7 @@
     <div class="row">
       <div class="col-md-4">
         <h3>Donate</h3>
-        <p>We are a non-profit business, which means all funds from dog adoptions and all donations go towards new equipment, dog food and toys, and petrol for transport to rescue abandoned and stray dogs. Your donation could help save a dogs life. </p>
+        <p>We are a non-profit business, which means all funds from dog adoptions and all donations go towards new equipment, dog food and toys, and petrol for transport to rescue stray dogs. Your donation could help save a dogs life. </p>
         <ul><li><a class="btn btn-secondary" href="donate.html" role="button">Donate Now &raquo;</a></li></ul>
       </div>
       <div class="col-md-4">
@@ -156,7 +157,7 @@
       <div class="col-md-4">
         <h3>Adopt</h3>
         <p>Adopting a dog today can mean happiness for you, your family and your new dog. By adopting through APS, you are not only saving one dogs life, but also contibuting to the saving of many other dogs out there that are yet to be rescued. </p>
-        <ul><li><a class="btn btn-secondary" href="adopt-4.html" role="button">Adopt Now &raquo;</a></li></ul>
+        <ul><li><a class="btn btn-secondary" href="adopt.html" role="button">Adopt Now &raquo;</a></li></ul>
       </div>
     </div>
        
@@ -164,8 +165,9 @@
 
       <!-- FOOTER -->
       <footer class="container">
+          <img src="Images/logo-20x20.jpg">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2019 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p> <a href="index.html">Home</a> &middot; <a href="about.html">About</a> &middot; <a href="adopt.html">Adopt</a> &middot; <a href="donate.html">Donate</a> &middot; <a href="volunteer.html">Volunteer</a> &middot; <a href="report.html">Report</a> &middot; <a href="review.html">Review</a></p>
       </footer>
     </main>
 
