--- a/review-thanks.html
+++ b/review-thanks.html
@@ -87,7 +87,7 @@
         
         <div class="starter-template container lead-narrow">
         <h1>Thank-you!</h1>
-        <p class="lead">You will receive an email if we need any more information from you. We thank you for your help towards saving a dog's life. <br> See below for other ways to help us out.</p>
+        <p class="lead">Your review will be published after it has been through moderation. <br> See below for other ways to help us out.</p>
         </div>
         
         <div class="container">
@@ -99,9 +99,9 @@
         <p><a class="btn btn-secondary" href="volunteer.html" role="button">Volunteer Now &raquo;</a></p>
       </div>
       <div class="col-md-4">
-        <h3>Donate</h3>
+        <h3>Report a Stray</h3>
         <p>We are a non-profit business, which means all funds from dog adoptions and all donations go towards new equipment, dog food and toys, and petrol for transport to rescue abandoned and stray dogs. Your donation could help save a dogs life. </p>
-        <p><a class="btn btn-secondary" href="donate.html" role="button">Donate Now &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="report.html" role="button">Report Now &raquo;</a></p>
       </div>
       <div class="col-md-4">
         <h3>Adopt</h3>
