--- a/adopt-tarn.html
+++ b/adopt-tarn.html
@@ -46,6 +46,7 @@
       
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+          <img src="Images/logo-test-3.jpg">
         <a class="navbar-brand" href="#">Animal Protection Society</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -59,7 +60,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="adopt-4.html">Adopt</a>
+              <a class="nav-link" href="adopt.html">Adopt</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="donate.html">Donate</a>
@@ -103,7 +104,7 @@
         <p class="lead">Tarn is a Golden Retriever. He is three years old.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="Images/tarn-500x500.png"><rect width="100%" height="100%" fill="#eee"/>
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="Images/slideshow-adopt/tarn1.jpg"><rect width="100%" height="100%" fill="#eee"/>
       </div>
     </div>
           
@@ -117,8 +118,9 @@
 
       <!-- FOOTER -->
       <footer class="container">
+         <img src="Images/logo-20x20.jpg">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2019 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p> <a href="index.html">Home</a> &middot; <a href="about.html">About</a> &middot; <a href="adopt.html">Adopt</a> &middot; <a href="donate.html">Donate</a> &middot; <a href="volunteer.html">Volunteer</a> &middot; <a href="report.html">Report</a> &middot; <a href="review.html">Review</a></p>
       </footer>
     </main>
 
