--- a/volunteer.html
+++ b/volunteer.html
@@ -46,6 +46,7 @@
       
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+          <img src="Images/logo-test-3.jpg">
         <a class="navbar-brand" href="#">Animal Protection Society</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -59,7 +60,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="adopt-4.html">Adopt</a>
+              <a class="nav-link" href="adopt.html">Adopt</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="donate.html">Donate</a>
@@ -94,18 +95,18 @@
     <div class="row">
       <div class="col-md-4">
         <h3>Dog Rescue</h3>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-secondary" href="#" role="button">Volunteer for Dog Rescue &raquo;</a></p>
+        <p>Quite often, we are called out to mulitple different locations for dog rescue at the same time. Our dog rescue volunteers allow us to be at multiple locations at one time, so more dogs can be rescued.<br><br><br><br><br></p>
+        <p><a class="btn btn-secondary" href="volunteer-questionnaire.html" role="button">Volunteer for Dog Rescue &raquo;</a></p>
       </div>
       <div class="col-md-4">
         <h3>Dog Walking</h3>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn btn-secondary" href="#" role="button">Volunteer for Dog Walking &raquo;</a></p>
+        <p>We offer a very special dog walking programme where members of the public who are either looking to adopt a dog, or who can't quite afford a dog yet but would still like to form a special bond with some furry friends, can come into our shelter and take a dog for a walk around the block, assisted by one of our volunteers. </p>
+        <p><a class="btn btn-secondary" href="volunteer-questionnaire.html" role="button">Volunteer for Dog Walking &raquo;</a></p>
       </div>
       <div class="col-md-4">
         <h3>Dog Socialising</h3>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">Volunteer for Dog Socialising &raquo;</a></p>
+        <p>We rescue dogs on a regular basis that need a bit more attention than others. If a dog has been on its own for long enough, the level of trust it may hold for other dogs and humans may plummit. We require volunteers to assist in dog socialising, to maintain a high level of safety for our dogs.<br><br><br></p>
+        <p><a class="btn btn-secondary" href="volunteer-questionnaire.html" role="button">Volunteer for Dog Socialising &raquo;</a></p>
       </div>
     </div>
        
@@ -113,8 +114,9 @@
 
       <!-- FOOTER -->
       <footer class="container">
+         <img src="Images/logo-20x20.jpg">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2017-2019 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p> <a href="index.html">Home</a> &middot; <a href="about.html">About</a> &middot; <a href="adopt.html">Adopt</a> &middot; <a href="donate.html">Donate</a> &middot; <a href="volunteer.html">Volunteer</a> &middot; <a href="report.html">Report</a> &middot; <a href="review.html">Review</a></p>
       </footer>
     </main>
 
