--- a/about.html
+++ b/about.html
@@ -46,7 +46,6 @@
       
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <img src="Images/logo-test-3.jpg">
         <a class="navbar-brand" href="#">Animal Protection Society</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -116,7 +115,7 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Location</h2>
-        <p class="lead">Our shelter is located on Buskin Road, which runs off of Highcliff Road.</p>
+        <p class="lead">Our shelter is located on Buskin Road, which runs off of Highcliff Road.<br><br>As the owners live on site, we ask that you please only visit the shelter during our opening hours: 10am - 3pm Monday to Saturday.<br><br>The road up to the shelter is quite narrow and windy, please be careful driving and stick to the speed limit. <br><br> Just down from the shelter is a nice walking track up to the monument that we recommend checking out. You could even use our dog walking programme to walk the track with one of our dogs and one of our volunteers. Please see the 'Services' section above for more information.</p>
       </div>
       <div class="col-md-5 order-md-1">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="Images/location.jpg"><rect width="100%" height="100%" fill="#eee"/>
@@ -128,7 +127,10 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Partners</h2>
-        <p class="lead">We are in proud partnership with the SPCA, Purina, Mobile Pet Vet and Raewyn Ludwig's Dog Training Services.</p>
+          <p class="lead">We are in proud partnership with the SPCA, Purina, Mobile Pet Vet and Raewyn Ludwig's Dog Training Services.</p><h4>SPCA</h4><p>We work in partnership with the SPCA by providing each other space for dogs if the other service cannot house anymore dogs at that time.</p>
+          <h4>Purina</h4><p>We sell Purina dog food on site. This is what we feed the dogs at our shelter.</p>
+          <h4>Mobile Pet Vet</h4><p>The Mobile Pet Vet visits our shelter to take care of dogs that need more medical care than others, which means we do not put the dog under more stress by transporting it to a vet.</p>
+          <h4>Raewyn Ludwig's Dog Training Services</h4><p>Raewyn assists us in training dogs that haven't been domesticated in a long time, so they need a bit more time and effort.</p>
       </div>
       <div class="col-md-5">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="Images/partners.jpg"><rect width="100%" height="100%" fill="#eee"/>
@@ -141,7 +143,7 @@
 
       <!-- FOOTER -->
       <footer class="container">
-         <img src="Images/logo-20x20.jpg">
+         <img src="Images/logo3.svg" height="35px" width="35px">
         <p class="float-right"><a href="#">Back to top</a></p>
         <p> <a href="index.html">Home</a> &middot; <a href="about.html">About</a> &middot; <a href="adopt.html">Adopt</a> &middot; <a href="donate.html">Donate</a> &middot; <a href="volunteer.html">Volunteer</a> &middot; <a href="report.html">Report</a> &middot; <a href="review.html">Review</a></p>
       </footer>
