--- a/adopt-forest.html
+++ b/adopt-forest.html
@@ -46,7 +46,6 @@
       
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <img src="Images/logo-test-3.jpg">
         <a class="navbar-brand" href="#">Animal Protection Society</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -101,7 +100,11 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Forest</h2>
-        <p class="lead">Forest is a Whippet and he is four years old.</p>
+        <p class="lead">Forest is a four year old Whippet. Forest is not toilet trained yet, but he can be with a bit of hard work and determination, as he is a very smart dog. Forest knows the basic commands but Whippets are very quick-learning breeds so he can pick up commands quickly. Forest is a very shy dog around people he hasn't met before, so you will need to spend a lot of time with him in the early stages if you decide to adopt him. Forest gets scared around dogs bigger than him, but this can be worked around if you have the time to introduce the dogs safely. He loves dinner time and sometimes eats a bit too fast, so he does need a gulp bowl at meal times.</p>
+        <h4>Commands</h4>
+        <ol><li>Sit</li>
+            <li>Down</li>
+            <li>Stay</li></ol>
       </div>
       <div class="col-md-5 order-md-1">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="Images/slideshow-adopt/forest1.jpg"><rect width="100%" height="100%" fill="#eee"/>
@@ -109,7 +112,7 @@
     </div>
           
     <div class="float">   
-    <ul><li><a class="btn btn-secondary" href="meeting.html" role="button">Adopt Max &raquo;</a></li></ul>
+    <ul><li><a class="btn btn-secondary" href="meeting.html" role="button">Adopt Forest &raquo;</a></li></ul>
     </div>
 
     <hr class="featurette-divider">
@@ -118,7 +121,7 @@
 
       <!-- FOOTER -->
       <footer class="container">
-         <img src="Images/logo-20x20.jpg">
+         <img src="Images/logo3.svg" height="35px" width="35px">
         <p class="float-right"><a href="#">Back to top</a></p>
         <p> <a href="index.html">Home</a> &middot; <a href="about.html">About</a> &middot; <a href="adopt.html">Adopt</a> &middot; <a href="donate.html">Donate</a> &middot; <a href="volunteer.html">Volunteer</a> &middot; <a href="report.html">Report</a> &middot; <a href="review.html">Review</a></p>
       </footer>
