--- a/adopt-olive.html
+++ b/adopt-olive.html
@@ -46,7 +46,6 @@
       
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <img src="Images/logo-test-3.jpg">
         <a class="navbar-brand" href="#">Animal Protection Society</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -101,7 +100,13 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Olive</h2>
-        <p class="lead">Olive is a German Shorthaired Pointer puppy. She is 18 weeks old.</p>
+        <p class="lead">Olive is a German Shorthaired Pointer puppy. She is 18 weeks old. Olive has not been desexed, as she is too young. Olive is avaliable to be adopted but you will need to come back to us when the time comes for her to be desexed. We will do this for you, free of charge. Olive is an escape artist, so you will need to have a secure backyard. German Shorthaired Pointers generally have a lot of energy so you need to be able to spend a lot of time with her. As she is a puppy, she likes to chew things. She knows what she can and can't chew, but if she gets bored, she will chew anything - especially shoes! If Olive sounds like the puppy for you, please adopt her!</p>
+        <h4>Commands</h4>
+        <ol><li>Sit</li>
+            <li>Down</li>
+            <li>Wait</li>
+            <li>Stay</li>
+            <li>Leave it</li></ol>
       </div>
       <div class="col-md-5 order-md-1">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="Images/slideshow-adopt/olive1.jpg"><rect width="100%" height="100%" fill="#eee"/>
@@ -118,7 +123,7 @@
 
       <!-- FOOTER -->
       <footer class="container">
-         <img src="Images/logo-20x20.jpg">
+         <img src="Images/logo3.svg" height="35px" width="35px">
         <p class="float-right"><a href="#">Back to top</a></p>
         <p> <a href="index.html">Home</a> &middot; <a href="about.html">About</a> &middot; <a href="adopt.html">Adopt</a> &middot; <a href="donate.html">Donate</a> &middot; <a href="volunteer.html">Volunteer</a> &middot; <a href="report.html">Report</a> &middot; <a href="review.html">Review</a></p>
       </footer>
