--- a/adopt-tarn.html
+++ b/adopt-tarn.html
@@ -46,7 +46,6 @@
       
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <img src="Images/logo-test-3.jpg">
         <a class="navbar-brand" href="#">Animal Protection Society</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -101,7 +100,17 @@
     <div class="row featurette">
       <div class="col-md-7 order-md-2">
         <h2 class="featurette-heading">Tarn</h2>
-        <p class="lead">Tarn is a Golden Retriever. He is three years old.</p>
+        <p class="lead">Tarn is a three year old Golden Retriever. Tarn is full of life and ready to be adopted by a loving person who is keen to take on this ball of energy. Tarn is fully house trained and gets on well with other dogs and kids, although he is not very fond of cats. Tarn needs someone who is active but can also enjoy a cuddle every now and then. He loves tennis balls and is very food-motivated, so training him to do more special tricks will be an easy job. As you can see from the photo, Tarn loves to play in muddy puddles so regular baths and grooming is essential for Tarn.</p>
+        <h4>Commands</h4>
+        <ol><li>Sit</li>
+            <li>Down</li>
+            <li>Stay</li>
+            <li>Wait</li>
+            <li>Paw</li>
+            <li>Roll over</li>
+            <li>Bath time</li>
+            <li>Fetch</li>
+            <li>Give</li></ol>
       </div>
       <div class="col-md-5 order-md-1">
         <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="Images/slideshow-adopt/tarn1.jpg"><rect width="100%" height="100%" fill="#eee"/>
@@ -118,7 +127,7 @@
 
       <!-- FOOTER -->
       <footer class="container">
-         <img src="Images/logo-20x20.jpg">
+         <img src="Images/logo3.svg" height="35px" width="35px">
         <p class="float-right"><a href="#">Back to top</a></p>
         <p> <a href="index.html">Home</a> &middot; <a href="about.html">About</a> &middot; <a href="adopt.html">Adopt</a> &middot; <a href="donate.html">Donate</a> &middot; <a href="volunteer.html">Volunteer</a> &middot; <a href="report.html">Report</a> &middot; <a href="review.html">Review</a></p>
       </footer>
