--- a/adopt.html
+++ b/adopt.html
@@ -46,7 +46,6 @@
       
     <header>
       <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-          <img src="Images/logo-test-3.jpg">
         <a class="navbar-brand" href="#">Animal Protection Society</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -98,7 +97,7 @@
               </div>
             <div class="card-body">
                 <h3 class="card-title">Olive</h3><h5> GSP</h5> 
-                    <p class="card-text">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                    <p class="card-text">Olive is a German Shorthaired Pointer puppy. She is 18 weeks old. Olive has not been desexed, as she is too young. Olive is avaliable to be adopted but you will need to come back to us when the time comes for her to be desexed. We will do this for you for free.</p>
                     <p><a class="btn btn-secondary" href="adopt-olive.html" role="button">Read More &raquo;</a></p>
             </div>
         </div><!-- /.card -->
@@ -108,7 +107,7 @@
               </div>
             <div class="card-body">
                 <h3 class="card-title">Tarn </h3><h5>Golden Retriever </h5>
-                    <p class="card-text">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                    <p class="card-text">Tarn is a three year old Golden Retriever. Tarn is full of life and ready to be adopted by a loving person who is keen to take on this ball of energy. Tarn is fully house trained and gets on well with other dogs and kids, although he is not very fond of cats.</p><br>
                     <p><a class="btn btn-secondary" href="adopt-tarn.html" role="button">Read More &raquo;</a></p>
             </div>
         </div><!-- /.card -->
@@ -119,7 +118,7 @@
               </div>
             <div class="card-body">
                 <h3 class="card-title">Forest </h3><h5>Whippet</h5> 
-                    <p class="card-text">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+                    <p class="card-text">Forest is a four year old Whippet. Forest is not toilet trained yet, but he can be with a bit of hard work and determination, as he is a very smart dog. Forest knows the basic commands but Whippets are very quick-learning breeds so he can pick up commands quickly.</p>
                     <p><a class="btn btn-secondary" href="adopt-forest.html" role="button">Read More &raquo;</a></p>
             </div>
         </div><!-- /.card -->
@@ -128,9 +127,9 @@
                 <img src="Images/roland-test.png">
               </div>
             <div class="card-body">
-                <h3 class="card-title">Roland</h3> <h5> German Shepard</h5> 
-                    <p class="card-text">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Read More &raquo;</a></p>
+                <h3 class="card-title">Roland</h3> <h5> German Shepherd</h5> 
+                    <p class="card-text">Roland is a white German Shepherd. He is eight years old. Roland is not a social dog. We have tried to socialise him with other dogs but he just doesn't get along with other dogs. Roland will need to go to a home where there are no other animals.</p><br>
+                    <p><a class="btn btn-secondary" href="adopt-roland.html" role="button">Read More &raquo;</a></p>
             </div>
         </div><!-- /.card -->
         <div class="card mb-4">
@@ -139,8 +138,8 @@
               </div>
             <div class="card-body">
                 <h3 class="card-title">Mickey</h3><h5> Labrador</h5> 
-                    <p class="card-text">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Read More &raquo;</a></p>
+                    <p class="card-text">Mickey is a 7 month old Labrador puppy. He is full of energy and requires a walk every day to burn off some steam. Mickey has not been desexed so he will need to come back for a visit when the time comes, but this will be free of charge.</p>
+                    <p><a class="btn btn-secondary" href="adopt-mickey.html" role="button">Read More &raquo;</a></p>
             </div>
         </div><!-- /.card -->
         <div class="card mb-4">
@@ -149,8 +148,8 @@
               </div>
             <div class="card-body">
                 <h3 class="card-title">Belle </h3> <h5>Labrador x Collie</h5> 
-                    <p class="card-text">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Read More &raquo;</a></p>
+                    <p class="card-text">Belle is a Labrador Collie cross. She is 1 year old and loves to play with other dogs. She is very gentle and does well with kids and cats. Belle would be best suited in a home with other social dogs. She is very polite and she has great recall.</p>
+                    <p><a class="btn btn-secondary" href="adopt-belle.html" role="button">Read More &raquo;</a></p>
             </div>
         </div><!-- /.card -->
         <div class="card mb-4">
@@ -159,8 +158,8 @@
               </div>
             <div class="card-body">
                 <h3 class="card-title">Pongo </h3><h5> Dalmation</h5> 
-                    <p class="card-text">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Read More &raquo;</a></p>
+                    <p class="card-text">Pongo is a Dalmation and he is a senior dog, at 12 years old. Although he moves a bit slower than other dogs, he still loves to go for walks and play with quiet dogs. Pongo loves to cuddle and play with toys. He is a very sweet dog and the perfect companion.</p>
+                    <p><a class="btn btn-secondary" href="adopt-pongo.html" role="button">Read More &raquo;</a></p>
             </div>
         </div><!-- /.card -->
         <div class="card mb-4">
@@ -169,8 +168,8 @@
               </div>
             <div class="card-body">
                 <h3 class="card-title">Urso </h3> <h5>Samoyed</h5> 
-                    <p class="card-text">Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-                    <p><a class="btn btn-secondary" href="#" role="button">Read More &raquo;</a></p>
+                    <p class="card-text">Urso is a six year old Samoyed. Urso needs regular grooming, as he sheds all year round. Urso does not like dogs that are smaller than him but he has a great time with dogs of his size or larger. He is very obedient and loving, but he is an escape artist. </p>
+                    <p><a class="btn btn-secondary" href="adopt-urso.html" role="button">Read More &raquo;</a></p>
             </div>
         </div><!-- /.card -->
         </div>
@@ -183,7 +182,7 @@
 
       <!-- FOOTER -->
       <footer class="container">
-         <img src="Images/logo-20x20.jpg">
+         <img src="Images/logo3.svg" height="35px" width="35px">
         <p class="float-right"><a href="#">Back to top</a></p>
         <p> <a href="index.html">Home</a> &middot; <a href="about.html">About</a> &middot; <a href="adopt.html">Adopt</a> &middot; <a href="donate.html">Donate</a> &middot; <a href="volunteer.html">Volunteer</a> &middot; <a href="report.html">Report</a> &middot; <a href="review.html">Review</a></p>
       </footer>
